Index.css: trying to fix that not centered position of elements->will create a new branch for it

--- a/src/components/UI/Footer.css
+++ b/src/components/UI/Footer.css
@@ -1,6 +1,6 @@
 footer {
   background-color: #eee2dc;
-  color: black;
+  color: #123C69;
   height: 80px;
   text-align: center;
   padding: 30px;
